--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ body {
   border-bottom: 1px solid #e7e7e7;
   align-items: center;
   display: flex;
+  flex-wrap: wrap;
   padding: 0 1.4em;
   box-sizing: border-box;
   border-radius: 5px;
@@ -107,7 +108,6 @@ body {
     width: 85%;
   }
   .dashboard-container {
-    display: list-item;
     height: 10em;
   }
   .signed-in-links, .signed-out-links {
@@ -115,14 +115,18 @@ body {
   }
   .countdown-box {
     font-size: 0.8em;
+    margin: auto;
   }
   .single-box {
     text-align: center;
     margin: 0.3em 0.3em
   }
   .deadline-title {
+    text-align: center;
     font-size: 1em;
-    margin-top: 1.2em;
+    margin-top: 0.1em;
+    min-width: 100%;
+    min-height: 2rem;
   }
   .deadline-detail-container {
     width: 90%;
