--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
   text-decoration: none;
 }
 .dashboard a:hover {
-  color: red;
+  color: rgb(236, 33, 33);
 }
 .dashboard-container {
   /* width: 85%; */
@@ -114,12 +114,23 @@ body {
     font-size: 0.9em;
   }
   .countdown-box {
-    font-size: 0.8em;
+    font-size: 0.77em;
     margin: auto;
   }
   .single-box {
     text-align: center;
     margin: 0.3em 0.3em
+  }
+  .big-text {
+    box-sizing: border-box;
+    text-align: center;
+    background-color: gray;
+    width: 2.5em;
+    height: 2.5em;
+    font-weight: bold;
+    font-size: 1.3em;
+    border-radius: 7px;
+    padding-top: 0.7rem;
   }
   .deadline-title {
     text-align: center;
