--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
+
+html {
+  height: 100%;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100%;
 }
-
 .dashboard {
   /* display: inline-block; */
   width: 80%;
@@ -17,13 +20,14 @@ body {
   text-decoration: none;
 }
 .dashboard a:hover {
-  color: rgb(236, 33, 33);
+  color: #4d71a1
 }
 .dashboard-container {
   /* width: 85%; */
+  background-color: white;
   margin: 1em auto;
   height: 8em;
-  border-bottom: 1px solid #e7e7e7;
+  /* border-bottom: 1px solid #e7e7e7; */
   align-items: center;
   display: flex;
   flex-wrap: wrap;
@@ -31,9 +35,10 @@ body {
   box-sizing: border-box;
   border-radius: 5px;
   overflow: hidden;
+  box-shadow: 1px 2px 5px rgb(173, 173, 173);
 }
 .dashboard-container:hover {
-  box-shadow: 1px 3px 5px rgb(173, 173, 173);
+  box-shadow: 1px 3px 8px rgb(105, 105, 105);
   transform: scale(1.02);
   transition-duration: 100ms;
 }
@@ -41,6 +46,7 @@ body {
   font-size: 1.4em;
   max-width: 550px;
   font-weight: bold;
+  overflow: hidden;
 }
 .signed-in-links, .signed-out-links {
   display: flex;
@@ -53,6 +59,13 @@ body {
   text-decoration: none;
   margin: 0 0.4em;
   float: left;
+}
+.signed-in-links a:hover, .signed-out-links a:hover {
+  box-shadow: 0 2px 0 #10c8a7;
+  transition-duration: 150ms;
+}
+.signed-in-links a:active, .signed-out-links a:active {
+  color: #10c8a7;
 }
 .countdown-box {
   color: white;
@@ -79,7 +92,7 @@ body {
   font-size: 1.3em;
   margin: 0px;
   border-radius: 7px;
-  padding-top: 0.7rem;
+  padding-top: 0.8rem;
 }
 .deadline-detail-container {
   width: 55%;
@@ -90,6 +103,7 @@ body {
   padding: 1.4em 1.4em 2em 1.4em;
   border-radius: 8px;
   box-shadow: 1px 4px 8px rgb(173, 173, 173);
+  background-color: white;
   /* word-wrap: break-word; */
 }
 .deadline-detail-title {
@@ -103,6 +117,47 @@ body {
   text-align: left;
   font-size: 0.9em;
 }
+.emptylist {
+  width: 80%;
+  margin: 1em auto;
+  margin-top: 3em;
+  text-align: center;
+  font-size: 1.2em;
+}
+.forgot-link {
+  margin-top: -27px;
+  text-align: right;
+}
+.forgot-link a{
+  text-decoration: none;
+  color: black; 
+}
+.forgot-link a:hover {
+  color: #0645AD;
+}
+.forgot-link a:active {
+  color: #0B0080;
+}
+.forgotpassword-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0px 1px 7px rgb(173, 173, 173);
+  border-radius: 8px;
+  width: 500px;
+  min-height: 400px;
+  box-sizing: border-box;
+  padding: 40px 40px;
+}
+.forgotpassword-header {
+  text-align: left;
+  font-size: 1.5em;
+  font-weight: 500;
+} 
+.forgotpassword-container p {
+  font-size: 0.9em;
+}
 @media screen and (max-width: 600px) {
   .dashboard {
     width: 85%;
@@ -112,6 +167,9 @@ body {
   }
   .signed-in-links, .signed-out-links {
     font-size: 0.9em;
+  }
+  .signed-in-links a:hover, .signed-out-links a:hover {
+    box-shadow: none;
   }
   .countdown-box {
     font-size: 0.77em;
@@ -155,5 +213,90 @@ body {
   }
   .deadline-detail-time, .deadline-detail-date {
     font-size: 0.7em;
+  }
+  .emptylist {
+    width: 80%;
+    font-size: 1.1em;
+  }
+  .forgot-link {
+    font-size: 0.9em;
+  }
+  .forgotpassword-container {
+    width: 94%;
+    min-height: 300px;
+    padding: 35px 35px;
+  }
+  .forgotpassword-header {
+    text-align: left;
+    font-size: 1.1em;
+    font-weight: 500;
+  }
+  .forgotpassword-container p {
+    font-size: 0.75em;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .dashboard {
+    width: 85%;
+  }
+  .dashboard-container {
+    height: 10em;
+  }
+  .signed-in-links, .signed-out-links {
+    font-size: 0.8em;
+  }
+  .signed-in-links a:hover, .signed-out-links a:hover {
+    box-shadow: none;
+  }
+  .countdown-box {
+    font-size: 0.77em;
+    margin: auto;
+  }
+  .single-box {
+    text-align: center;
+    margin: 0.3em 0.3em
+  }
+  .big-text {
+    box-sizing: border-box;
+    text-align: center;
+    background-color: gray;
+    width: 2.5em;
+    height: 2.5em;
+    font-weight: bold;
+    font-size: 1.3em;
+    border-radius: 7px;
+    padding-top: 0.7rem;
+  }
+  .deadline-title {
+    text-align: center;
+    font-size: 1em;
+    margin-top: 0.1em;
+    min-width: 100%;
+    min-height: 2rem;
+  }
+  .deadline-detail-container {
+    width: 90%;
+    margin: 2.5em auto;
+  }
+  .deadline-detail {
+    padding: 1.4em 1.4em 1.5em 1.4em;
+  }
+  .deadline-detail-body {
+    min-height: 4em;
+    font-size: 0.9em;
+  }
+  .deadline-detail-title {
+    font-size: 1.2em;
+  }
+  .deadline-detail-time, .deadline-detail-date {
+    font-size: 0.7em;
+  }
+  .emptylist {
+    width: 90%;
+    font-size: 1em;
+  }
+  .forgot-link {
+    font-size: 0.8em;
   }
 }
